vlib/v/checker/tests/infix_expr_left_side_assogn_err.vv
fn main() {
	a := 69
	b := 420
	a + b = a + b
	(a + b) = a + b
}
